# openclaw-code

./: .env.example  .gitignore  CLAW.md  PARITY.md  README.md  install.sh
app/: main.cpp  opengl_app
calc/: calculator.py
rust/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
rust/.claw/sessions/: session-1775208857631.json  session-1775210790832.json
rust/.github/workflows/: ci.yml
rust/crates/api/: Cargo.toml
rust/crates/api/src/: client.rs  error.rs  lib.rs  sse.rs  types.rs
rust/crates/api/src/providers/: claw_provider.rs  github_copilot.rs  mod.rs  openai_compat.rs
rust/crates/api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs
rust/crates/commands/: Cargo.toml
rust/crates/commands/src/: lib.rs
rust/crates/compat-harness/: Cargo.toml
rust/crates/compat-harness/src/: lib.rs
rust/crates/lsp/: Cargo.toml
rust/crates/lsp/src/: client.rs  error.rs  lib.rs  manager.rs  types.rs
rust/crates/plugins/: Cargo.toml
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: bash.rs  bootstrap.rs  compact.rs  config.rs  conversation.rs  file_ops.rs  hooks.rs  json.rs  lib.rs  mcp.rs  mcp_client.rs  mcp_stdio.rs  oauth.rs  permissions.rs  prompt.rs  remote.rs  sandbox.rs  session.rs  sse.rs  usage.rs
rust/crates/server/: Cargo.toml
rust/crates/server/src/: lib.rs
rust/crates/tools/: .gitignore  Cargo.toml
rust/crates/tools/src/: lib.rs
rust/crates/tui/: Cargo.toml
rust/crates/tui/src/: app.rs  auth.rs  config.rs  login.rs  main.rs  telegram.rs  ui.rs
rust/docs/releases/: 0.1.0.md
