[package]
name = "lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
lsp-types.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
url = "2"

[lints]
workspace = true
