[package]
name = "openclaw-code"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "openclaw-code"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
dotenvy = "0.15"
crossterm = "0.28"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tools = { path = "../tools" }

[lints]
workspace = true
